clusters/develop/intra-namespace.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: develop
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
