clusters/develop/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: develop
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
